--- a/i_dot_ai_backup_final_3.ipynb
+++ b/i_dot_ai_backup_final_3.ipynb
@@ -42,22 +42,16 @@
         "# **The Problem**\n",
         "According to GOV.UK (n.d.a), the UK government comprises 24 Ministerial Departments, 20 Non-ministerial departments, 424 Agencies and other public bodies, 115 High Profile groups, and 19 Public corporations. This extensive organizational structure presents substantial opportunities for AI implementation across the public sector. However, finding and accessing potential AI use-cases for most impactful projects can be very challenging.\n",
         "\n",
-        "A good place to start and one strategy I will be adopting for this assessment is to follow the classification suggested by Incubator AI (2024) in their AI taxonomy, where the decision on what AI use-case to deliver is guided by the user and technical challenge rather than by policy.\n",
+        "A good place to start and one strategy I will be adopting for this assessment is to follow the classification suggested by [Incubator for AI (2024)](https://ai.gov.uk/blogs/the-i-ai-taxonomy/) in their AI taxonomy, where the decision on what AI use-case to deliver is guided by the user and technical challenge rather than by policy.\n",
         "\n",
         "Generally any individual making pivotal life transitions commonly experience the tension between embracing change and the human desire to want to stick with what's familiar. The AI use-cases for this kind of human challenge is therefore cross-government and applicable for any scenario where key life transition is happening. This falls perfectly under i.ai's Public facing services (GenAI & UI) taxonomy.\n",
         "\n",
-        "For purpose of this assessment, and the reason above, I have choosen an AI that focuses on the challenge users/new employees (such those just leaving school) often fear getting into or struggle settling in new roles.\n",
+        "For purpose of this assessment, and the reason above, I have choosen an AI use-case that focuses on the challenge users/new employees (such those just leaving school) often face from fear getting into or struggle settling in new roles.\n",
         "\n",
-        "This maps well with the governments concern about Youth unemployment specified in chapter 4 of A Youth Guarantee to unleash opportunity and set young people on the path to success (GOV.UK, 2024a).\n",
-        "- Point 124: **Preventing young people from losing touch with education or employment pre-18**\n",
-        "The government is committed to acting and intervening early to ensure young people are in employment, education or training at or after becoming 18 by:\n",
-        "    - Subpoint 4\n",
-        "        \n",
-        "        > **Offer work experience and careers advice**\n",
-        "        >\n",
-        "        >\n",
-        "        > We will ensure young people are able to confidently identify their next steps and benefit from an introduction to the world of work through our careers offer in schools and colleges, including early steps towards delivering 2 weeks’ worth of work experience. Working in partnership with local stakeholders, the new jobs and careers service will also provide support where needed for young people aged under 18 who are not in school or college.\n",
-        "        >\n",
+        "This challenge is also directly related to the governments' concern about youth unemployment specified in chapter 4 of Get Britain Working White Paper ([GOV.UK, 2024a](https://www.gov.uk/government/publications/get-britain-working-white-paper/get-britain-working-white-paper#chapter-4-a-youth-guarantee-to-unleash-opportunity-and-set-young-people-on-the-path-to-success)) that proposes a Youth Guarantee to unleash opportunity and set young people on the path to success.\n",
+        "- **Point 124: Preventing young people from losing touch with education or employment pre-18**\n",
+        "    - **Subpoint 4: Offer work experience and careers advice**\n",
+        "        > We will ensure young people are able to confidently identify their next steps and benefit from an introduction to the world of work through our careers offer in schools and colleges, including early steps towards delivering 2 weeks' worth of work experience. Working in partnership with local stakeholders, the new jobs and careers service will also provide support where needed for young people aged under 18 who are not in school or college.\n",
         "\n",
         "\n",
         "\n",
@@ -72,14 +66,22 @@
       "cell_type": "markdown",
       "source": [
         "# **The Opportunity**\n",
+        "To support the government's ambition of preventing disengagement from education or employment before the age of 18, I propose the integration of **AI-powered simulated work trials** as part of the new universal jobs and careers service. These simulations will use frontier **Agentic Systems** to offer young people immersive, low-risk introductions to real-world tasks across a range of sectors. Designed to replicate the decision-making, communication, and problem-solving involved in actual roles, the trials can be tailored to individual interests and skill levels, enabling personalised career exploration at scale.\n",
         "\n",
-        "In light of the government's commitment to early intervention to prevent young people from losing touch with education or employment before the age of 18, and its promise to offer tailored careers advice and meaningful work experience, how can AI-driven digital solutions be effectively designed and implemented as part of the new universal jobs and careers service?\n",
+        "By partnering with the Youth Guarantee Trailblazer Schemes such as those in the north-east England as reported by [BBC 2025](https://www.bbc.co.uk/news/articles/c628gw4e68yo.amp), this solution can extend meaningful work experience to all young people, including those not currently in education, and equip them with the confidence and insight needed to navigate their next steps and transition successfully into employment, education, or training after 18.\n",
         "\n",
-        "These solutions must support scalable and personalised delivery of guidance, help young people confidently identify their next steps, and provide access to work experience opportunities, including progress toward two weeks' experience. They should also ensure support reaches those under 18 who are not in school or college, through close collaboration with local stakeholders, ultimately enabling successful transitions to post-18 pathways.\n",
+        "Delivering such agentic system as part of the new universal jobs and careers service that help youths become confident employees will be a direct fulfillment of one of the recommendations of the AI Opportunities Action Plan proposed by [Department for Science, Innovation and Technology (2025)](https://www.gov.uk/government/publications/ai-opportunities-action-plan/ai-opportunities-action-plan#changes-lives).\n",
+        "\n",
+        "- **Recommendation 2: Change lives by embracing AI**\n",
+        "    - **Sub-recommendation 2.1: AI Adoption is core to delivering the government's missions**\n",
+        "    >     \n",
+        "    The adoption of high-performing, trustworthy AI at scale will be critical to the government fulfilling the five missions. AI should become core to how we think about delivering services, transforming citizens' experiences, and improving productivity. As well as strengthening the foundations - data, skills, talent, IP, and assurance measures set out above - government should also focus on its role as a major user and customer of AI and how it uses its powers to catalyse private sector adoption\n",
         "\n",
         "\n",
         "\n",
-        "To support the government's ambition of preventing disengagement from education or employment before the age of 18, we propose the integration of AI-powered simulated work trials as part of the new universal jobs and careers service. Building on the approach developed by StintAgents, these simulations offer young people immersive, low-risk introductions to real-world tasks across a range of sectors. Designed to replicate the decision-making, communication, and problem-solving involved in actual roles, the trials can be tailored to individual interests and skill levels, enabling personalised career exploration at scale. By partnering with schools, colleges, and local organisations, this solution can extend meaningful work experience to all young people, including those not currently in education, and equip them with the confidence and insight needed to navigate their next steps and transition successfully into employment, education, or training after 18."
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "AnnjID2-anHQ"
@@ -97,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **Multi-Modal Agentic Systems**\n",
+        "### **Frontier Agentic Systems**\n",
         "\n",
         "Multi-Modal Agentic Systems represent a significant AI advancement that processes text, voice, and visual inputs through large language models combined with real-time information retrieval and autonomous decision-making, creating dynamic, context-aware interactions particularly engaging for younger users. Voice Agent Pipelines build on this technology by integrating speech recognition, natural language understanding, and text-to-speech synthesis to deliver real-time, personalized career guidance and simulated work experiences for individuals under 18, creating immersive platforms that help young people confidently explore career options and prepare for their transition to adult pathways through natural conversational engagement."
       ],
@@ -1549,8 +1551,10 @@
         "\n",
         "\n",
         "\n",
-        "1.  GOV.UK (n.d.a) 'Departments, agencies and public bodies', GOV.UK. Available at: https://www.gov.uk/government/organisations (Accessed: 28 May 2025).\n",
-        "2.  Incubator AI (2024) 'The i.AI taxonomy', AI for Public Good. Available at: https://ai.gov.uk/blogs/the-i-ai-taxonomy/ (Accessed: 28 May 2025).\n",
+        "1. BBC (2025) 'I look every day for a job but there is nothing'. [online] BBC. Available at: https://www.bbc.co.uk/news/articles/c628gw4e68yo.amp [Accessed 28 May 2025].\n",
+        "2. GOV.UK (n.d.a) 'Departments, agencies and public bodies'. [online] GOV.UK. Available at: https://www.gov.uk/government/organisations [Accessed 28 May 2025].\n",
+        "3. Incubator for AI (2024) 'The i.AI taxonomy'. [online] AI.GOV.UK. Available at: https://ai.gov.uk/blogs/the-i-ai-taxonomy/ [Accessed 28 May 2025].\n",
+        "4.  Department for Science, Innovation and Technology (2025) 'AI Opportunities Action Plan'. [online] GOV.UK. Available at: https://www.gov.uk/government/publications/ai-opportunities-action-plan/ai-opportunities-action-plan#changes-lives [Accessed 28 May 2025].\n",
         "\n",
         "\n",
         "\n",
@@ -1575,7 +1579,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7krOgziFp2GN5Ceb4D2Sv",
+      "authorship_tag": "ABX9TyNMWZfe2Xr8admF6helixMW",
       "include_colab_link": true
     },
     "kernelspec": {
