--- a/i_dot_ai_backup_final_3.ipynb
+++ b/i_dot_ai_backup_final_3.ipynb
@@ -471,6 +471,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Global storage for all conversation sessions\n",
+        "conversation_sessions = {}\n",
+        "\n",
         "# Voice Configuration for Different Agents\n",
         "AGENT_VOICES = {\n",
         "    \"HR Manager\": {\n",
@@ -642,10 +645,6 @@
         "# ==============================================================================\n",
         "# CONVERSATION STATE MANAGEMENT\n",
         "# ==============================================================================\n",
-        "\n",
-        "# Global storage for all conversation sessions\n",
-        "conversation_sessions = {}\n",
-        "\n",
         "@dataclass\n",
         "class SessionData:\n",
         "    \"\"\"\n",
@@ -1037,7 +1036,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Function Tool Definitions**"
+        "#### **Tool Definitions**"
       ],
       "metadata": {
         "id": "GP8tSGb29Iom"
@@ -1053,7 +1052,7 @@
         "    print(\"[debug] get_welcome_info called\")\n",
         "\n",
         "    welcome_message = (\n",
-        "        \"Hi there! Welcome to the team — we're thrilled to have you onboard! 🎉 \"\n",
+        "        \"Hello there! Welcome to our organisation. We are very thrilled to have you onboard!\"\n",
         "        \"You're joining a group of passionate, supportive people who are here to help you succeed. \"\n",
         "        \"Feel free to ask me anything about getting started, company culture, or where to find things. \"\n",
         "    )\n",
@@ -1613,9 +1612,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPeLDLXnKlPn7PwkU6LY5SL",
+      "authorship_tag": "ABX9TyO67l7BHM43CyfB4ngLAif5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1624,8 +1621,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
