--- a/i_dot_ai_backup_final_4.ipynb
+++ b/i_dot_ai_backup_final_4.ipynb
@@ -187,13 +187,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "p7jQ7qj5pu2C",
-        "outputId": "53b4fa47-0352-4c2c-fb98-398e3ffd2f1f"
+        "outputId": "d22f7e5c-4560-4b4a-9c2a-f311c9bad073"
       },
       "outputs": [
         {
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 20,
       "metadata": {
         "id": "jl8VZIL7ssqG"
       },
@@ -360,20 +360,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {
         "id": "Oz8heNa4p00l",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c296e2dc-ff28-47cb-c57a-38397752cf94"
+        "outputId": "4135c01c-43e8-42b3-efff-a6b352794ee6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Innovation, leadership, expertise.\n"
+            "Vision, leadership, expertise.\n"
           ]
         }
       ],
@@ -445,7 +445,7 @@
       "metadata": {
         "id": "-2zCLmTY8KDr"
       },
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -866,7 +866,7 @@
         "\n",
         "        # Create informative status message\n",
         "        status_message = f\"\"\"\n",
-        "                            🎯 Onboarding Conversation #{conversation_data.turn_count}\n",
+        "                            🎯 Conversation Turn #{conversation_data.turn_count}\n",
         "                            📝 You said: \"{transcription}\"\n",
         "                            🗣️ {active_agent} responded (HR Manager entry point)\n",
         "                            🎵 Speech generated\n",
@@ -940,7 +940,7 @@
         "\n",
         "        # Create status message\n",
         "        status_message = f\"\"\"\n",
-        "                            🎯 Onboarding Conversation Turn#{conversation_data.turn_count}\n",
+        "                            🎯 Conversation Turn #{conversation_data.turn_count}\n",
         "                            📝 You asked: \"{user_text}\"\n",
         "                            🗣️ {active_agent} responded (HR Manager entry point)\n",
         "                            🎵 Speech generated\n",
@@ -963,7 +963,7 @@
       "metadata": {
         "id": "pKJ87zpWlQHo"
       },
-      "execution_count": 14,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1061,7 +1061,7 @@
         "    print(f\"[debug] get_team_info called with info_type: {info_type}\")\n",
         "\n",
         "    team_info = {\n",
-        "        \"first_task\": \"Your first task will be completing our Standard Operating Procedure training module. After reviewing the materials, you'll need to answer a brief assessment to confirm your understanding. This ensures everyone is aligned on our practices before diving into project work.\",\n",
+        "        \"first_task\": \"Your first task will be completing our Standard Operating Procedure training module. After reviewing the materials, you'll need to answer a brief assessment to confirm your understanding.\",\n",
         "        \"structure\": \"Our team has 8 members: 3 senior developers, 2 product managers, 2 designers, and you! We work in cross-functional squads.\",\n",
         "        \"meetings\": \"Daily standups at 9:30 AM, sprint planning every 2 weeks, and monthly all-hands. I'll add you to all relevant calendars.\",\n",
         "        \"culture\": \"We value collaboration, learning, and work-life balance. Monthly team lunches and quarterly offsite events.\",\n",
@@ -1078,7 +1078,7 @@
       "metadata": {
         "id": "ibl7juTa9F6C"
       },
-      "execution_count": 15,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1140,7 +1140,7 @@
       "metadata": {
         "id": "xX5oOU7K9XaK"
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1319,7 +1319,7 @@
         "            if conversation_id in conversation_session:\n",
         "                del conversation_session[conversation_id]\n",
         "            return (\n",
-        "                \"🎯 New HR-led onboarding session started! Ready to help with your first day...\",\n",
+        "                \"🎯 New onboarding session started!\",\n",
         "                create_agent_avatar(\"HR Manager\"),\n",
         "                create_agent_avatar(\"AI Colleague\"),\n",
         "                create_agent_avatar(\"IT Staff\"),\n",
@@ -1346,7 +1346,7 @@
       "metadata": {
         "id": "I3_rVlDDL5pl"
       },
-      "execution_count": 17,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1393,7 +1393,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4a78e37c-6410-4cb3-b1b5-cab11fc4ee10"
+        "outputId": "b735f1b7-7cc2-4153-822f-b3b916196e9c"
       },
       "execution_count": null,
       "outputs": [
@@ -1416,7 +1416,7 @@
             "   - Natural language understanding drives all routing decisions\n",
             "   - Enhanced decision making using prompt_with_handoff_instructions\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "* Running on public URL: https://a510a601ed30b2c4d2.gradio.live\n",
+            "* Running on public URL: https://0dc80cae78640bf084.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1428,7 +1428,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://a510a601ed30b2c4d2.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://0dc80cae78640bf084.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
@@ -1438,27 +1438,33 @@
           "name": "stdout",
           "text": [
             "[debug] Processing voice input with HR Manager as main entry point\n",
-            "[debug] User: Hey, hello, good morning.\n",
-            "[ERROR] Response generation failed: cannot access local variable 'conversation_data' where it is not associated with a value\n",
-            "[debug] Generating speech for HR Manager with voice 'alloy'\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-14-2eed78429d52>\", line 286, in get_agent_response\n",
-            "    if conversation_id not in conversation_data:\n",
-            "                              ^^^^^^^^^^^^^^^^^\n",
-            "UnboundLocalError: cannot access local variable 'conversation_data' where it is not associated with a value\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[ERROR] Error: cannot access local variable 'conversation_data' where it is not associated with a value\n"
+            "[debug] User: Hello, good morning.\n",
+            "[debug] get_welcome_info called\n",
+            "[debug] Final agent that responded: HR Manager\n",
+            "[debug] HR Manager: Hello there! Good morning and welcome to our organization. We are very thrilled to have you onboard! You're joining a group of passionate and supportive people who are here to help you succeed. Feel free to ask me anything about getting started, company culture, or where to find things!\n",
+            "[debug] NO HANDOFF: HR Manager handled the request directly\n",
+            "[debug] Generating speech for HR Manager with voice 'alloy'\n",
+            "[debug] Processing voice input with HR Manager as main entry point\n",
+            "[debug] User: Can you tell me about the team I'll be working with?\n",
+            "[debug] get_team_info called with info_type: structure\n",
+            "[debug] Final agent that responded: Line Manager\n",
+            "[debug] Line Manager: Welcome to the team! You'll be working with a fantastic group of 8 members, including 3 senior developers, 2 product managers, and 2 designers, along with yourself. \n",
+            "\n",
+            "We operate in cross-functional squads, which means you'll have the opportunity to collaborate closely with everyone across different roles. This setup encourages teamwork and innovation, making each project exciting and dynamic.\n",
+            "\n",
+            "I'm eager to discuss your initial projects and how you’ll contribute to our current initiatives. Together, we can achieve some great results!\n",
+            "[debug] SUCCESS: Handoff occurred from HR Manager to Line Manager\n",
+            "[debug] Generating speech for Line Manager with voice 'echo'\n",
+            "[debug] Processing voice input with HR Manager as main entry point\n",
+            "[debug] User: When I resume, what will be the first things that I will be doing?\n",
+            "[debug] get_team_info called with info_type: processes\n",
+            "[debug] Final agent that responded: Line Manager\n",
+            "[debug] Line Manager: Welcome aboard! When you resume, the first things you’ll be doing include diving into our collaborative processes. We're all about teamwork and support here, so you can look forward to a proper one-on-one this week. During that meeting, we’ll discuss your role in detail and I’ll be happy to answer any questions you have. \n",
+            "\n",
+            "It’s an exciting time to join us, and I can't wait to see how you’ll contribute to our team's success!\n",
+            "[debug] SUCCESS: Handoff occurred from HR Manager to Line Manager\n",
+            "[debug] Generating speech for Line Manager with voice 'echo'\n",
+            "[debug] Processing voice input with HR Manager as main entry point\n"
           ]
         }
       ]
@@ -1549,8 +1555,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNcKb7lpDJqJyK4qHdZip+o",
+      "authorship_tag": "ABX9TyOrgboYP9tiO5+gSkfKorXm",
       "include_colab_link": true
     },
     "kernelspec": {
