--- a/i_dot_ai_backup_final_5.ipynb
+++ b/i_dot_ai_backup_final_5.ipynb
@@ -2290,8 +2290,7 @@
         "    'AI Engineer': '#27ae60'\n",
         "}\n",
         "\n",
-        "# Define tasks with much larger vertical spacing between levels within each role\n",
-        "# Increased spacing from 0.15 to 0.25 between levels for better separation\n",
+        "# Define tasks\n",
         "tasks = {\n",
         "    'AI Lead': [\n",
         "        {'name': 'Define AI Ethics & Strategy', 'start': 0.5, 'duration': 3.0, 'y_offset': 0.375},\n",
@@ -2324,7 +2323,7 @@
         "y_positions = {role: i for i, role in enumerate(reversed(roles))}  # Reverse to match your image\n",
         "\n",
         "# Chart dimensions\n",
-        "bar_height = 0.25  # Much thinner bars (was 0.4)\n",
+        "bar_height = 0.25\n",
         "week_positions = np.arange(1, 9)\n",
         "\n",
         "# Create the Gantt bars\n",
@@ -2332,11 +2331,9 @@
         "    y_pos = y_positions[role]\n",
         "\n",
         "    for task in role_tasks:\n",
-        "        # Calculate bar position and width\n",
         "        start_x = task['start']\n",
         "        width = task['duration']\n",
         "\n",
-        "        # Create enhanced bars with no z-overlap - all bars visible in separate lanes\n",
         "        bar = patches.Rectangle(\n",
         "            (start_x, y_pos - bar_height/2 + task['y_offset']),\n",
         "            width,\n",
@@ -2345,18 +2342,18 @@
         "            edgecolor='white',\n",
         "            linewidth=1.5,\n",
         "            alpha=0.9,\n",
-        "            zorder=1  # Ensure all bars are on same z-level\n",
+        "            zorder=1\n",
         "        )\n",
         "        ax.add_patch(bar)\n",
         "\n",
-        "        # Add subtle shadow effect positioned below each bar\n",
+        "        # Add subtle shadow\n",
         "        shadow = patches.Rectangle(\n",
         "            (start_x + 0.02, y_pos - bar_height/2 + task['y_offset'] - 0.03),\n",
         "            width,\n",
         "            bar_height,\n",
         "            facecolor='gray',\n",
         "            alpha=0.1,\n",
-        "            zorder=0  # Shadows behind bars\n",
+        "            zorder=0\n",
         "        )\n",
         "        ax.add_patch(shadow)\n",
         "\n",
@@ -2370,11 +2367,9 @@
         "                fontsize=9,\n",
         "                color='white')\n",
         "\n",
-        "# Customize the chart with executive styling\n",
         "ax.set_xlim(0, 8.5)\n",
-        "ax.set_ylim(-1.5, len(roles) - 0.5)  # Extended for summary box\n",
+        "ax.set_ylim(-1.5, len(roles) - 0.5)\n",
         "\n",
-        "# Set up x-axis (weeks) with proper alignment - positioned at top\n",
         "weeks = range(1, 9)\n",
         "week_labels = [f'Week {w}' for w in weeks]\n",
         "phase_labels = ['Kick-off', 'Planning', 'Development', 'Integration',\n",
@@ -2384,37 +2379,30 @@
         "ax.set_xticklabels([f'{week}\\n{phase}' for week, phase in zip(week_labels, phase_labels)],\n",
         "                   fontsize=9, ha='center')\n",
         "\n",
-        "# Move x-axis to top\n",
+        "# Kepp x-axis to top\n",
         "ax.xaxis.tick_top()\n",
         "ax.xaxis.set_label_position('top')\n",
         "\n",
-        "# Set up y-axis (roles) - matching your image order, without emojis for Colab compatibility\n",
         "role_labels_clean = ['AI Engineer', 'User Researcher', 'Web Developer', 'AI Lead']\n",
         "ax.set_yticks(range(len(roles)))\n",
         "ax.set_yticklabels(role_labels_clean, fontsize=12, fontweight='bold')\n",
         "\n",
-        "# Add subtle grid\n",
         "ax.grid(True, axis='x', alpha=0.2, linestyle='--', linewidth=0.5)\n",
         "ax.set_axisbelow(True)\n",
         "\n",
-        "# Add week boundary lines and role demarcation lines\n",
         "for week in week_positions:\n",
         "    ax.axvline(x=week - 0.5, color='lightgray', alpha=0.4, linestyle='-', linewidth=0.8)\n",
         "\n",
-        "# Add horizontal lines to demarcate each role's row\n",
         "for i in range(len(roles)):\n",
-        "    # Add line above and below each role\n",
         "    ax.axhline(y=i - 0.5, color='lightgray', alpha=0.3, linestyle='-', linewidth=0.5)\n",
         "    ax.axhline(y=i + 0.5, color='lightgray', alpha=0.3, linestyle='-', linewidth=0.5)\n",
         "\n",
-        "# Clean up spines\n",
         "for spine in ax.spines.values():\n",
         "    spine.set_visible(False)\n",
         "\n",
-        "# Add title without the main project title\n",
         "plt.title('8-Week Development Roadmap - 4 Member Team', fontsize=11, fontweight='600', pad=25, color='#2c3e50')\n",
         "\n",
-        "# Remove default ticks\n",
+        "# Disable default ticks\n",
         "ax.tick_params(left=False, bottom=False)\n",
         "plt.show()\n"
       ],
@@ -2514,7 +2502,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPJsoGmkPv6f9Tp3R0MUuCN",
+      "authorship_tag": "ABX9TyMO8S0p/TtHHJ+WXevacoSD",
       "include_colab_link": true
     },
     "kernelspec": {
