--- a/i_dot_ai_backup_final_5.ipynb
+++ b/i_dot_ai_backup_final_5.ipynb
@@ -1686,7 +1686,7 @@
         "This evaluation is designed to test a simple version of a multi-agent system, focusing on how well it handles basic onboarding conversations. Since we're working within the limitations of a Jupyter Notebook. I have focused here on a simple but core conversation quality rather than advanced dialogue flows.\n",
         "\n",
         "I have used a few key metrics to judge how well the agents perform:\n",
-        "- Do their answers make sense and stay on topic?\n",
+        "- Do their answers stay on topic?\n",
         "- Are their responses factually correct?\n",
         "- Do they stay professional and avoid toxic language?\n",
         "- Can the triaging agent tell when it's time to hand things over to a more specialized agent?\n",
@@ -1717,7 +1717,7 @@
         "    parsed_conversations = []\n",
         "\n",
         "    for conv_id, conv_data in conversation_logs.items():\n",
-        "        if conv_id == 'default':  # Skip tool call logs\n",
+        "        if conv_id == 'default':\n",
         "            continue\n",
         "\n",
         "        events = conv_data['events']\n",
@@ -1764,7 +1764,7 @@
         "    return test_cases\n",
         "\n",
         "def evaluate_conversation_quality(conversation_logs: Dict):\n",
-        "    \"\"\"Evaluate conversation quality using simplified DeepEval metrics\"\"\"\n",
+        "    \"\"\"Evaluate conversation quality using DeepEval metrics\"\"\"\n",
         "\n",
         "    # Parse conversation logs\n",
         "    conversation_pairs = parse_conversation_logs(conversation_logs)\n",
@@ -1773,7 +1773,7 @@
         "    # Create test cases\n",
         "    test_cases = create_test_cases(conversation_pairs)\n",
         "\n",
-        "    # Define simplified metrics\n",
+        "    # Define metrics\n",
         "    correctness_metric = GEval(\n",
         "        name=\"Correctness\",\n",
         "        criteria=\"Determine if the actual output is factually correct, helpful, and appropriate for the given input in an onboarding conversation context.\",\n",
@@ -2264,6 +2264,8 @@
         "* Sprint 4 finalizes the launch-ready system with full polish and stability.\n",
         "\n",
         "Following this 8-week development phase, our scaling team takes ownership to strengthen the platform and deploy it across high-impact business units.\n",
+        "\n",
+        "**OLU NB: ADD a brief mention of strategy I will use (e.g. OKR) based on already presenting the side project from where we kick off. I should have discussed Transitiai first.**\n",
         "\n"
       ],
       "metadata": {
@@ -2502,7 +2504,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMO8S0p/TtHHJ+WXevacoSD",
+      "authorship_tag": "ABX9TyOg/2ylXcICMZadjhg/nLCv",
       "include_colab_link": true
     },
     "kernelspec": {
