--- a/i_dot_ai_backup_final_5.ipynb
+++ b/i_dot_ai_backup_final_5.ipynb
@@ -1691,7 +1691,7 @@
         "- Do they stay professional and avoid toxic language?\n",
         "- Can the triaging agent tell when it's time to hand things over to a more specialized agent?\n",
         "\n",
-        "The goal is to see if the basic features work well, not to test a full-blown enterprise-level system. It's a practical way to show that the core ideas behind the system are sound, even in a simplified setup."
+        "The goal is to see if the basic features work well, not to test a full-blown enterprise-level system. It's a practical way to show that the core ideas behind the system are functional, even in a simplified setup. A more complete systems such as the one presented for delivery in the next section will require a full end-to-end evaluation."
       ],
       "metadata": {
         "id": "iUzj5wDYW7a4"
@@ -2257,7 +2257,7 @@
       "cell_type": "markdown",
       "source": [
         "# **The Delivery**\n",
-        "A four-sprint development cycle with a dedicated four-person team can evolve our prototype into a production-ready solution.\n",
+        "A four-sprint development cycle with a dedicated four-person team can evolve this prototype into a production-ready solution.\n",
         "* Sprint 1 establishes the core system foundation and initial testing.\n",
         "* Sprint 2 delivers our minimum viable product with essential functionality.\n",
         "* Sprint 3 produces a refined pilot version ready for broader validation.\n",
@@ -2476,12 +2476,11 @@
         "\n",
         "\n",
         "\n",
-        "1. BBC (2025) 'I look every day for a job but there is nothing'. [online] BBC. Available at: https://www.bbc.co.uk/news/articles/c628gw4e68yo.amp [Accessed 28 May 2025].\n",
-        "2. GOV.UK (n.d.a) 'Departments, agencies and public bodies'. [online] GOV.UK. Available at: https://www.gov.uk/government/organisations [Accessed 28 May 2025].\n",
-        "3. Incubator for AI (2024) 'The i.AI taxonomy'. [online] AI.GOV.UK. Available at: https://ai.gov.uk/blogs/the-i-ai-taxonomy/ [Accessed 28 May 2025].\n",
-        "4.  Department for Science, Innovation and Technology (2025) 'AI Opportunities Action Plan'. [online] GOV.UK. Available at: https://www.gov.uk/government/publications/ai-opportunities-action-plan/ai-opportunities-action-plan#changes-lives [Accessed 28 May 2025].\n",
-        "5. DeepLearning.AI (2024) 'Agentic Design Patterns Part 5, Multi-Agent Collaboration'. [online] DeepLearning.AI. Available at:https://www.deeplearning.ai/the-batch/agentic-design-patterns-part-5-multi-agent-collaboration/?utm_campaign=The%20Batch&utm_source=hs_email&utm_medium=email&_hsenc=p2ANqtz-_gIrmbxcITc28FhuvGDCyEatfevaCrKevCJqk0DMR46aWOdQblPdiiop0C21jprkMtzx6e [[Accessed 28 May 2025]]\n",
-        "\n",
+        "1. BBC (2025) 'I look every day for a job but there is nothing'. [online] BBC. Available at: https://www.bbc.co.uk/news/articles/c628gw4e68yo.amp [Accessed 01 June 2025].\n",
+        "2. GOV.UK (n.d.a) 'Departments, agencies and public bodies'. [online] GOV.UK. Available at: https://www.gov.uk/government/organisations [Accessed 01 June 2025].\n",
+        "3. Incubator for AI (2024) 'The i.AI taxonomy'. [online] AI.GOV.UK. Available at: https://ai.gov.uk/blogs/the-i-ai-taxonomy/ [Accessed 01 June 2025].\n",
+        "4.  Department for Science, Innovation and Technology (2025) 'AI Opportunities Action Plan'. [online] GOV.UK. Available at: https://www.gov.uk/government/publications/ai-opportunities-action-plan/ai-opportunities-action-plan#changes-lives [Accessed 01 June 2025].\n",
+        "5. DeepLearning.AI (2024) 'Agentic Design Patterns Part 5, Multi-Agent Collaboration'. [online] DeepLearning.AI. Available at:https://www.deeplearning.ai/the-batch/agentic-design-patterns-part-5-multi-agent-collaboration/?utm_campaign=The%20Batch&utm_source=hs_email&utm_medium=email&_hsenc=p2ANqtz-_gIrmbxcITc28FhuvGDCyEatfevaCrKevCJqk0DMR46aWOdQblPdiiop0C21jprkMtzx6e [Accessed 01 June 2025].\n",
         "\n",
         "\n",
         "\n"
@@ -2504,7 +2503,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOg/2ylXcICMZadjhg/nLCv",
+      "authorship_tag": "ABX9TyMIFtK8Tp3QKsvByuId06A4",
       "include_colab_link": true
     },
     "kernelspec": {
